# auto-quantize

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
crates/auto-quantize-cli/: Cargo.toml
crates/auto-quantize-cli/src/: download.rs  errors.rs  main.rs
crates/auto-quantize-cli/src/catalog/: architecture.rs  fetch.rs  mod.rs  parse.rs
crates/auto-quantize-cli/src/probe/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/auto-quantize-cli/tests/: smoke.rs
crates/auto-quantize-core/: Cargo.toml
crates/auto-quantize-core/src/: architecture.rs  decision.rs  hardware.rs  lib.rs  quant.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
site/: index.html
