[package]
name = "auto-quantize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Benchmark your machine and get the best-fitting quantized model build"
default-run = "auto-quantize"

[[bin]]
name = "auto-quantize"
path = "src/main.rs"

[dependencies]
auto-quantize-core = { path = "../auto-quantize-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
