[package]
name = "auto-quantize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Benchmark your machine and get the best-fitting quantized model build"
default-run = "auto-quantize"

[[bin]]
name = "auto-quantize"
path = "src/main.rs"

[dependencies]
auto-quantize-core = { path = "../auto-quantize-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows-only: Win32 memory + DXGI adapter enumeration for hardware probing
# (docs/BACKLOG.md 1.4). Header-only bindings, no vendor GPU SDK involved.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemInformation",
] }
